Fix bug in vhdl ls

--- a/resources/release_notes/release-notes.html
+++ b/resources/release_notes/release-notes.html
@@ -32,6 +32,16 @@
     <p style="color:#ff6868">Your feedback is very important in the TerosHDL development.</p>
     Please, fill out and share this <a href="https://docs.google.com/forms/d/e/1FAIpQLScPUXA-t7rwMFU1cgjXUAgDenz4r3vn4EsDKSWr94YjibWnNw/viewform?vc=0&c=0&w=1&flr=0">form</a> , it will take you 2 minutes.
     
+
+    <!-- *********************************************************************** -->
+    <h1 id="release-notes">Release notes 2.0.11</h1>
+
+    <h2>Hot fixes</h2>
+    <p>
+        <ul>
+            <li>Fix bug for VHDL language server.</li>
+        </ul>
+    </p>
     <!-- *********************************************************************** -->
     <h1 id="release-notes">Release notes 2.0.10</h1>
 
